--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,6 +29,13 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
+      - name: Pre-fetch artifact action (workaround)
+        uses: actions/upload-artifact@v3
+        with:
+          name: dummy
+          path: README.md
+          if-no-files-found: ignore
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
