--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,10 @@ theme:
         - Home Lab: Projects/Home Lab.md
         - Personal Website: Projects/Personal Website.md
         - Raspberry Pi: Projects/Raspberry Pi.md
+        - AWS Project:
+            Creating Instance Using TerraForm.md
       - My Next Goal: My next goal.md
+
 
 extra_css:
   - assets/stylesheets/extra.css
