--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ theme:
         - AWS Project:
             Creating Instance Using TerraForm.md
             Migrating EBS to another AZ.md
+            Implenting Load Balancing.md
       - My Next goal: My next goal.md
 
 
