--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,10 +39,12 @@ theme:
             Migrating EBS to another AZ.md
             Implenting Load Balancing.md
       - My Next goal: My next goal.md
+      - Resume: My Resume.md
+      - 
 
 
 extra_css:
-  - assets/stylesheets/extra.css
+ 
 
 extra:
   social:
